index.css
@import "@economist/component-typography";
@import "@economist/component-palette";
@import "@economist/component-grid";
@import "@economist/component-icon";

.bar-wrapper a, .bar-wrapper a:visited {
  color: inherit;
  text-decoration: none;
  border-bottom: 1px solid var(--color-london);
}

.bar-wrapper {
  font-family: var(--barwrapper-font-family, var(--fontfamily-body));
  font-size: var(--barwrapper-font-size, var(--text-size-step--2));
  line-height: var(--barwrapper-line-height, var(--text-line-height-body-on-step--2));
  padding: var(--barwrapper-vertical-padding, var(--grid-spacing-sheep)) var(--barwrapper-horizontal-padding, var(--grid-gutter-s));
}

.bar-wrapper--close {
  /* Not magic numbers.
   * The icon is supposed to have 1em of height, but it currently has
   * 1em of useless space surrounding it. */
  height: 2em;
  width: 2em;
}

.bar-wrapper--close-wrapper {
  position: absolute;
  right: var(--barwrapper-close-button-right-spacing, var(--grid-gutter-s));

  cursor: pointer;

  /* Compensate Icon's white space */
  top: -0.5em;
  right: -0.5em;
  /* Fat-finger friendliness */
  /* padding:1em offsets it to the sides, pull it back in. */
  padding: 1em;
  margin: -1em;
}

.bar-wrapper--container {
  position: relative;
  padding-right: var(--barwrapper-close-right-spacing, var(--grid-spacing-sheep));
  max-width: var(--barwrapper-max-width, 1000px);
  margin: auto;
}

